# web

./: Makefile.custom  README  make.bat  publish.sh
source/: available_operators.rst  conf.py  docs.rst  faq.rst  features.rst  gmsh_interface.rst  grid.rst  grid_functions.rst  index.rst  installation.rst  linear_systems.rst  logging.rst  news.rst  old_installation.rst  older_news.rst  privacy.rst  publications.rst  tutor.rst  tutorial.rst  tutorial_custom_ops.rst  tutorial_dirchlet.rst  tutorial_dirichlet.rst  tutorials.rst
source/notebooks/helmholtz_combined_exterior_dirichlet/: notebook.rst
source/notebooks/laplace_interior_dirichlet/: notebook.rst
source/theme/: back.html  layout.html  theme.conf
source/theme/static/: HussarBold-webfont.eot  sty.css
source/tutorial/: combined_scatterer.rst  index.rst  laplace_dirichlet.rst  mathematics_background.rst
source/tutorial/exterior_laplace_dirichlet.rst/: exterior_laplace_dirichlet.rst
source/tutorial/interior_laplace_dirichlet/: index.rst
source/tutorial/interior_laplace_neumann/: index.rst  interior_laplace_neumann.py  interior_laplace_neumann.rst
source/tutorial_custom_ops_files/: CMakeLists.txt  combined_helmholtz.i  helmholtz_3d_combined_boundary_operator.hpp  helmholtz_3d_combined_potential_kernel_functor.hpp  sound_soft_sphere.py
